[2020-10-24]
- Added Preschool Hat
- Added new Summer Event items
- Added Insectivorous Plant Hairpin
- Fixed Final Strike damage computation
- Fixed Book of Charms class restriction

[2020-10-03]
- Added Antonio's set
- Fixed Palace Guard refine bonus
- Added HJ and EQ skills to Lost Dragon
- Fixed Tarou + Clamp cards combo applying twice
- Added magical attack modifiers to Extended Info - Attack Modifiers

[2020-10-01]
- Added Bankruptcy set
- Added Lost Dragon MvP
- Added Summer Cocktails
- Fixed Savage pet bonus
- Fixed Scuba Mask script
- Fixed weapon and base attack bonus based
- Fixed Apple of Idun & Berserk MaxHP formula
- Fixed Assassin Cross of Sunset song ASDP formula

[2020-07-20]
- Fixed Bragi formula
- Fixed MDEF armor enchantment
- Fixed Magmaring critical bonus
- Added Beach Towel, Cookie Hat and Black Tailed Ribbon
- Fixed Valorous Carnage Katar Sonic Blow damage bonus when linked

[2020-07-05]
- Fixed Health Point computation
- Fixed Triple Attack damage computation

[2020-07-04]
- Added Ancient Tower monsters
- Fixed The Ring of Nibelugen damage formula

[2020-06-21]
- Fixed AR/FAR ASPD party buff
- Fixed Eddga behaviour with MDEF
- Added new Elysian Garden monsters
- Shield Chain now take into consideration class defense bypass

[2020-05-29]
- Fixed Spiral Pierce damage computation

[2020-05-28]
- Form validation upon save action
- Fixed Sting Hat script
- Fixed Wood Goblin refine bonus damage
- Fixed ASPD value for Katar on Assassin
- Added Dragonfly Monocle

[2020-05-01]
- Fixed A Whistle Perfect Dodge bonus computation
- Fixed Stone Skin, Anti Magic, Magic Mirror and Keeping skills

[2020-04-26]
- Shield Chain now take into consideration race defense bypass
- Naming functionality for builds

[2020-04-24]
- Fixed Finger Offensive damage computation

[2020-04-19]
- Fixed Bragi behaviour
- Fixed hard DEF formula
- Added Candy Hat, Pitch Black Evil Druid Hat
- Fixed some monsters properties

[2020-04-11]
- Fixed aspd computation for double dagger