@@ -852,7 +852,7 @@ MonsterOBJ = [
 ,[736,"Fallen Dragon",9,74,2,117,3450000,62,34,236,188,34,17000,49000,60,75,4800000,3900000,,1,0,3827]
 ,[737,"Fallen Acidus",7,4,2,86,152533,54,40,65,125,65,7590,9140,60,33,0,0,,1,0,3828]
 ,[738,"Fallen Ferus",7,4,2,86,152533,54,40,65,125,65,7590,9140,60,33,0,0,,1,0,3829]
-,[739,'Geiravor Disciple',1,54,1,99,211230,62,181,37,122,60,3189,5289,27,39,18000,10000,,1,0,3830]
+,[739,'Geiravor Disciple',7,54,1,99,211230,62,181,37,122,60,3189,5289,27,39,18000,10000,,1,0,3830]
 ,[740,"Geiravor Partisan",1,84,1,83,62000,30,176,200,122,29,2022,2288,29,72,10000,5000,,1,0,3831]
 ,[741,"Valkyrie Geiravor",8,64,2,99,10000000,30,120,120,220,210,5560,9980,25,42,2854900,3114520,,1,0,3834]
 ,[742,"Verthandi",7,34,1,99,6000000,81,110,65,130,52,7238,11040,72,37,4835600,1569970,,1,0,3838]
