@@ -1,3 +1,6 @@
+[2020-10-26]
+- Fixed Giant Shield refine bonus
+
 [2020-10-24]
 - Added Preschool Hat
 - Added new Summer Event items
